<resources>
    <string name="app_name">Youtube</string>
    <string name="playlist">Playlist</string>
    <string name="playlist_description">Emotional Well-being Healing Practices for Children</string>
    <string name="video_amount">32 video series</string>
    <string name="tv_back">Back</string>
    <string name="tv_playlist_name">Playlist</string>
    <string name="tv_title">Title</string>
    <string name="tv_description">Description</string>
    <string name="tv_number_of_videos">Number of videos</string>
    <string name="tv_try_again">Try again</string>
    <string name="tv_video_name">Video Name</string>
    <string name="tv_time">Time</string>
    <string name="tv_self_care_before_child_care">Self Care Before Child Care</string>
    <string name="tv_32_video_series">32 video series</string>
    <string name="tv_download">Download</string>
    <string name="tv_title_how_displacement_instability_uncertainty_affect_children">HOW DISPLACEMENT INSTABILITY UNCERTAINTY AFFECT CHILDREN</string>
    <string name="tv_desc">Refugee children often have suffered many losses and because of that, they are grieving these losses they\'re grieving the loss of their home, the loss of the life they knew, the places where they were used to be and that they loved to go. The loss of their friends, and certainly the loss of their family</string>
</resources>